7 - Teoria da Computação e Compiladores/compiladorMiniPascal/src/antlr/mini_pascalParser.java
package antlr;// Generated from mini_pascal.g4 by ANTLR 4.13.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class mini_pascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, RSV_INT=5, RSV_BOOLEAN=6, RSV_PROGRAM=7, 
		RSV_VAR=8, RSV_BEGIN=9, RSV_END=10, RSV_PROCEDURE=11, RSV_IF=12, RSV_THEN=13, 
		RSV_ELSE=14, RSV_WHILE=15, RSV_DO=16, RSV_NOT=17, RSV_OR=18, RSV_DIV=19, 
		RSV_AND=20, RSV_READ=21, RSV_WRITE=22, OPERADORES_DE_RELACAO=23, OPERADORES_MAIS_MENOS=24, 
		OPERADORES_VEZES_DIV=25, VAZIO=26, IGUAL=27, PONTO=28, VIRGULA=29, DOIS_PONTOS=30, 
		PONTO_E_VIRGULA=31, COMENTARIO=32, STRING=33, DOIS_PONTOS_IGUAL=34, PARENTESES_DIREITO=35, 
		PARENTESES_ESQUERDO=36, NUMERO=37, DIGITO=38, IDENTIFICADOR=39, LETRA=40;
	public static final int
		RULE_programa = 0, RULE_bloco = 1, RULE_parteDeDeclaracaoDeVariavel = 2, 
		RULE_tipo = 3, RULE_constante = 4, RULE_declaracaoDeVariaveis = 5, RULE_listaDeIdentificadores = 6, 
		RULE_parteDeDeclaracoesDeSubRotinas = 7, RULE_declaracaoDeProcedimento = 8, 
		RULE_parametrosFormais = 9, RULE_secaoDeParametrosFormais = 10, RULE_comandoComposto = 11, 
		RULE_comando = 12, RULE_atribuicao = 13, RULE_chamadaDeProcedimento = 14, 
		RULE_comandoCondicional = 15, RULE_comandoRepetitivo = 16, RULE_expressao = 17, 
		RULE_relacao = 18, RULE_expressaoSimples = 19, RULE_termo = 20, RULE_fator = 21, 
		RULE_variavel = 22, RULE_listaDeExpressoes = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "bloco", "parteDeDeclaracaoDeVariavel", "tipo", "constante", 
			"declaracaoDeVariaveis", "listaDeIdentificadores", "parteDeDeclaracoesDeSubRotinas", 
			"declaracaoDeProcedimento", "parametrosFormais", "secaoDeParametrosFormais", 
			"comandoComposto", "comando", "atribuicao", "chamadaDeProcedimento", 
			"comandoCondicional", "comandoRepetitivo", "expressao", "relacao", "expressaoSimples", 
			"termo", "fator", "variavel", "listaDeExpressoes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'READ'", "'WRITE'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'='", "'.'", "','", "':'", "';'", 
			null, null, "':='", "')'", "'('"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "RSV_INT", "RSV_BOOLEAN", "RSV_PROGRAM", 
			"RSV_VAR", "RSV_BEGIN", "RSV_END", "RSV_PROCEDURE", "RSV_IF", "RSV_THEN", 
			"RSV_ELSE", "RSV_WHILE", "RSV_DO", "RSV_NOT", "RSV_OR", "RSV_DIV", "RSV_AND", 
			"RSV_READ", "RSV_WRITE", "OPERADORES_DE_RELACAO", "OPERADORES_MAIS_MENOS", 
			"OPERADORES_VEZES_DIV", "VAZIO", "IGUAL", "PONTO", "VIRGULA", "DOIS_PONTOS", 
			"PONTO_E_VIRGULA", "COMENTARIO", "STRING", "DOIS_PONTOS_IGUAL", "PARENTESES_DIREITO", 
			"PARENTESES_ESQUERDO", "NUMERO", "DIGITO", "IDENTIFICADOR", "LETRA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mini_pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mini_pascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode RSV_PROGRAM() { return getToken(mini_pascalParser.RSV_PROGRAM, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(mini_pascalParser.IDENTIFICADOR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(mini_pascalParser.PONTO_E_VIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode PONTO() { return getToken(mini_pascalParser.PONTO, 0); }
		public TerminalNode EOF() { return getToken(mini_pascalParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(RSV_PROGRAM);
			setState(49);
			match(IDENTIFICADOR);
			setState(50);
			match(PONTO_E_VIRGULA);
			setState(51);
			bloco();
			setState(52);
			match(PONTO);
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public ComandoCompostoContext comandoComposto() {
			return getRuleContext(ComandoCompostoContext.class,0);
		}
		public ParteDeDeclaracaoDeVariavelContext parteDeDeclaracaoDeVariavel() {
			return getRuleContext(ParteDeDeclaracaoDeVariavelContext.class,0);
		}
		public ParteDeDeclaracoesDeSubRotinasContext parteDeDeclaracoesDeSubRotinas() {
			return getRuleContext(ParteDeDeclaracoesDeSubRotinasContext.class,0);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RSV_INT || _la==RSV_BOOLEAN) {
				{
				setState(55);
				parteDeDeclaracaoDeVariavel();
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RSV_PROCEDURE) {
				{
				setState(58);
				parteDeDeclaracoesDeSubRotinas();
				}
			}

			setState(61);
			comandoComposto();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParteDeDeclaracaoDeVariavelContext extends ParserRuleContext {
		public List<DeclaracaoDeVariaveisContext> declaracaoDeVariaveis() {
			return getRuleContexts(DeclaracaoDeVariaveisContext.class);
		}
		public DeclaracaoDeVariaveisContext declaracaoDeVariaveis(int i) {
			return getRuleContext(DeclaracaoDeVariaveisContext.class,i);
		}
		public List<TerminalNode> PONTO_E_VIRGULA() { return getTokens(mini_pascalParser.PONTO_E_VIRGULA); }
		public TerminalNode PONTO_E_VIRGULA(int i) {
			return getToken(mini_pascalParser.PONTO_E_VIRGULA, i);
		}
		public ParteDeDeclaracaoDeVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parteDeDeclaracaoDeVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterParteDeDeclaracaoDeVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitParteDeDeclaracaoDeVariavel(this);
		}
	}

	public final ParteDeDeclaracaoDeVariavelContext parteDeDeclaracaoDeVariavel() throws RecognitionException {
		ParteDeDeclaracaoDeVariavelContext _localctx = new ParteDeDeclaracaoDeVariavelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parteDeDeclaracaoDeVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				declaracaoDeVariaveis();
				setState(64);
				match(PONTO_E_VIRGULA);
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RSV_INT || _la==RSV_BOOLEAN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode RSV_BOOLEAN() { return getToken(mini_pascalParser.RSV_BOOLEAN, 0); }
		public TerminalNode RSV_INT() { return getToken(mini_pascalParser.RSV_INT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==RSV_INT || _la==RSV_BOOLEAN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstanteContext extends ParserRuleContext {
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitConstante(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constante);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoDeVariaveisContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ListaDeIdentificadoresContext listaDeIdentificadores() {
			return getRuleContext(ListaDeIdentificadoresContext.class,0);
		}
		public DeclaracaoDeVariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoDeVariaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterDeclaracaoDeVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitDeclaracaoDeVariaveis(this);
		}
	}

	public final DeclaracaoDeVariaveisContext declaracaoDeVariaveis() throws RecognitionException {
		DeclaracaoDeVariaveisContext _localctx = new DeclaracaoDeVariaveisContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracaoDeVariaveis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			tipo();
			setState(75);
			listaDeIdentificadores();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDeIdentificadoresContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(mini_pascalParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(mini_pascalParser.IDENTIFICADOR, i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(mini_pascalParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(mini_pascalParser.VIRGULA, i);
		}
		public ListaDeIdentificadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeIdentificadores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterListaDeIdentificadores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitListaDeIdentificadores(this);
		}
	}

	public final ListaDeIdentificadoresContext listaDeIdentificadores() throws RecognitionException {
		ListaDeIdentificadoresContext _localctx = new ListaDeIdentificadoresContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listaDeIdentificadores);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(IDENTIFICADOR);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(78);
				match(VIRGULA);
				setState(79);
				match(IDENTIFICADOR);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParteDeDeclaracoesDeSubRotinasContext extends ParserRuleContext {
		public DeclaracaoDeProcedimentoContext declaracaoDeProcedimento() {
			return getRuleContext(DeclaracaoDeProcedimentoContext.class,0);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(mini_pascalParser.PONTO_E_VIRGULA, 0); }
		public ParteDeDeclaracoesDeSubRotinasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parteDeDeclaracoesDeSubRotinas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterParteDeDeclaracoesDeSubRotinas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitParteDeDeclaracoesDeSubRotinas(this);
		}
	}

	public final ParteDeDeclaracoesDeSubRotinasContext parteDeDeclaracoesDeSubRotinas() throws RecognitionException {
		ParteDeDeclaracoesDeSubRotinasContext _localctx = new ParteDeDeclaracoesDeSubRotinasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parteDeDeclaracoesDeSubRotinas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(85);
			declaracaoDeProcedimento();
			setState(86);
			match(PONTO_E_VIRGULA);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoDeProcedimentoContext extends ParserRuleContext {
		public TerminalNode RSV_PROCEDURE() { return getToken(mini_pascalParser.RSV_PROCEDURE, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(mini_pascalParser.IDENTIFICADOR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(mini_pascalParser.PONTO_E_VIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ParametrosFormaisContext parametrosFormais() {
			return getRuleContext(ParametrosFormaisContext.class,0);
		}
		public DeclaracaoDeProcedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoDeProcedimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterDeclaracaoDeProcedimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitDeclaracaoDeProcedimento(this);
		}
	}

	public final DeclaracaoDeProcedimentoContext declaracaoDeProcedimento() throws RecognitionException {
		DeclaracaoDeProcedimentoContext _localctx = new DeclaracaoDeProcedimentoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracaoDeProcedimento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(RSV_PROCEDURE);
			setState(89);
			match(IDENTIFICADOR);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RSV_VAR || _la==IDENTIFICADOR) {
				{
				setState(90);
				parametrosFormais();
				}
			}

			setState(93);
			match(PONTO_E_VIRGULA);
			setState(94);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosFormaisContext extends ParserRuleContext {
		public List<SecaoDeParametrosFormaisContext> secaoDeParametrosFormais() {
			return getRuleContexts(SecaoDeParametrosFormaisContext.class);
		}
		public SecaoDeParametrosFormaisContext secaoDeParametrosFormais(int i) {
			return getRuleContext(SecaoDeParametrosFormaisContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(mini_pascalParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(mini_pascalParser.VIRGULA, i);
		}
		public ParametrosFormaisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosFormais; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterParametrosFormais(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitParametrosFormais(this);
		}
	}

	public final ParametrosFormaisContext parametrosFormais() throws RecognitionException {
		ParametrosFormaisContext _localctx = new ParametrosFormaisContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametrosFormais);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			secaoDeParametrosFormais();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(97);
				match(VIRGULA);
				setState(98);
				secaoDeParametrosFormais();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecaoDeParametrosFormaisContext extends ParserRuleContext {
		public ListaDeIdentificadoresContext listaDeIdentificadores() {
			return getRuleContext(ListaDeIdentificadoresContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(mini_pascalParser.DOIS_PONTOS, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(mini_pascalParser.IDENTIFICADOR, 0); }
		public TerminalNode RSV_VAR() { return getToken(mini_pascalParser.RSV_VAR, 0); }
		public SecaoDeParametrosFormaisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secaoDeParametrosFormais; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterSecaoDeParametrosFormais(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitSecaoDeParametrosFormais(this);
		}
	}

	public final SecaoDeParametrosFormaisContext secaoDeParametrosFormais() throws RecognitionException {
		SecaoDeParametrosFormaisContext _localctx = new SecaoDeParametrosFormaisContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_secaoDeParametrosFormais);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RSV_VAR) {
				{
				setState(104);
				match(RSV_VAR);
				}
			}

			setState(107);
			listaDeIdentificadores();
			setState(108);
			match(DOIS_PONTOS);
			setState(109);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoCompostoContext extends ParserRuleContext {
		public TerminalNode RSV_BEGIN() { return getToken(mini_pascalParser.RSV_BEGIN, 0); }
		public TerminalNode RSV_END() { return getToken(mini_pascalParser.RSV_END, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> PONTO_E_VIRGULA() { return getTokens(mini_pascalParser.PONTO_E_VIRGULA); }
		public TerminalNode PONTO_E_VIRGULA(int i) {
			return getToken(mini_pascalParser.PONTO_E_VIRGULA, i);
		}
		public ComandoCompostoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoComposto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).enterComandoComposto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mini_pascalListener ) ((mini_pascalListener)listener).exitComandoComposto(this);
		}
	}

	public final ComandoCompostoContext comandoComposto() throws RecognitionException {
		ComandoCompostoContext _localctx = new ComandoCompostoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comandoComposto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(RSV_BEGIN);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 549755851288L) != 0)) {
				{
				{
				setState(112);
				comando();
				setState(113);
				match(PONTO_E_VIRGULA);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(RSV_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
